# agents-guidelines-ko

./: .editorconfig  .gitignore  README.en.md  README.md  copilot-instructions.md  global-copilot.instructions.md  global-git-commit-instructions.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup-agents.py  setup-agents.sh  test_setup_agents.py
.claude/agents/: adr-writer.md  analytics-instrumentation.md  api-and-architecture.md  api-designer.md  architect.md  architecture-diagrammer.md  bug-triage.md  ci-build-fixer.md  ci-fixer.md  code-reviewer.md  compliance-auditor.md  data-engineer.md  data-platform-engineer.md  database-optimizer.md  dependency-auditor.md  dependency-manager.md  dependency-upgrader.md  devops-sre.md  docs-writer-en.md  docs-writer-ko.md  docs-writer.md  documentation-editor.md  feature-flag-manager.md  feature-implementer.md  flaky-test-hunter.md  frontend-engineer.md  i18n-localization.md  implementer.md  incident-and-release-comms.md  incident-commander.md  incident-comms.md  java-kotlin-expert.md  jvm-backend-engineer.md  kubernetes-architect.md  lint-fixer.md  localization-specialist.md  observability-engineer.md  onboarding-guide-writer.md  perf-profiler.md  performance-profiler.md  (+24 more)
.claude/rules/: agent-routing.md  (+2 more)
.github/: copilot-instructions.md
.serena/: project.yml
prompts/: continue-without-confirmation.prompt.md
setup_agents/: __main__.py  cli.py  constants.py
tests/: conftest.py  test_agents.py  test_base.py  test_cli.py  test_intellij.py  test_setup_agents.py  test_utils.py  test_vscode_settings.py
(+97 files in other folders)
